--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -111,9 +111,9 @@
                 <!-- Page Heading -->
                     <h1 class="page-header">
                             <!-- heading goes here-->
-                        Email us: TEAMCHILLOUT.CSE170@gmail.com
+                        Help!
                     </h1>
-                
+                    <p> Email us: TEAMCHILLOUT.CSE170@gmail.com </p>
                 <!-- main code goes here-->
 
                 </div>
