--- a/views/added.handlebars
+++ b/views/added.handlebars
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Be Chilled</a>
+                <a class="navbar-brand" href="/index">Be Chilled</a>
             </div>
 
 
@@ -80,7 +80,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                             <li class="active">
-                                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Home</a>
+                                <a href="/index"><i class="fa fa-fw fa-dashboard"></i> Home</a>
                             </li>
                             <li>
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
