--- a/views/analysis.handlebars
+++ b/views/analysis.handlebars
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Be Chilled</a>
+                <a class="navbar-brand" href="/index">Be Chilled</a>
             </div>
 
 
@@ -83,7 +83,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                             <li>
-                                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Home</a>
+                                <a href="/index"><i class="fa fa-fw fa-dashboard"></i> Home</a>
                             </li>
                             <li>
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
