--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Be Chilled</a>
+                <a class="navbar-brand" href="/index">Be Chilled</a>
             </div>
 
 
